RESOLVED FIXED 256886
REGRESSION(264093@main) GTK WTR changes broke hundred of tests
https://bugs.webkit.org/show_bug.cgi?id=256886
Summary REGRESSION(264093@main) GTK WTR changes broke hundred of tests
Claudio Saavedra
Reported 2023-05-17 04:31:37 PDT
EventSenderProxy::rawKeyUp/rawKeyDown() implementation without rebaselined expectations led to massive test breakage. Reverting 264093@main partially.
Attachments
Claudio Saavedra
Comment 1 2023-05-17 04:33:46 PDT
EWS
Comment 2 2023-05-17 05:19:52 PDT
Committed 264148@main (c0e6eaf56e49): <https://commits.webkit.org/264148@main> Reviewed commits have been landed. Closing PR #13957 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.