REGRESSION(264093@main) GTK WTR changes broke hundred of tests https://bugs.webkit.org/show_bug.cgi?id=256886

Reviewed by Philippe Normand.

These changes caused hundred of GTK tests breaking,
are unaccounted for in the original commit log, so
revert them. We should land them again with updated
test results and, preferrably, together with the
WPE implementation.

* Tools/WebKitTestRunner/gtk/EventSenderProxyGtk.cpp:
(WTR::EventSenderProxy::rawKeyDown):
(WTR::EventSenderProxy::rawKeyUp):

Canonical link: https://commits.webkit.org/264148@main